--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
   "dependencies": {
+    "createjs": "^1.0.1",
+    "easeljs": "^1.0.2",
     "ijavascript": "^5.2.1",
+    "jquery": "^3.6.0",
+    "preloadjs": "^1.0.1",
+    "soundjs": "^1.0.1",
     "ts-node": "^10.4.0",
+    "tweenjs": "^1.0.2",
     "typescript": "^4.5.5"
   }
 }
