--- a/package.json
+++ b/package.json
@@ -9,5 +9,9 @@
     "ts-node": "^10.4.0",
     "tweenjs": "^1.0.2",
     "typescript": "^4.5.5"
+  },
+  "devDependencies": {
+    "webpack": "^5.69.1",
+    "webpack-cli": "^4.9.2"
   }
 }
