--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "createjs": "^1.0.1",
     "easeljs": "^1.0.2",
     "ijavascript": "^5.2.1",
